refactor: added sent email via link and testcase
